fix: move back overflow-x hidden to timeline.scss

--- a/src/components/timeline/Timeline.scss
+++ b/src/components/timeline/Timeline.scss
@@ -1,5 +1,6 @@
 :root {
 	--timeline-cross-y: 50vh;
+	overflow-x: hidden;
 }
 
 .timeline {
@@ -200,16 +201,16 @@
 }
 
 .timeline__circle {
-	 position: relative;
-  width: 100%;
-  height: 100%;
+	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 .timeline__wheel {
-  position: absolute;
-  inset: 0;
-  transform-origin: 50% 50%;
-  transition: transform .5s ease;
+	position: absolute;
+	inset: 0;
+	transform-origin: 50% 50%;
+	transition: transform 0.5s ease;
 }
 
 .timeline__dot {
