--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,6 @@
 html, body {
 	height: 100%;
 	background: #F4F5F9;
-	overflow-x: hidden;
 }
 
 body { 
